
WARNING: Do not try to make any Dolibarr upgrade if you are running Mysql version 5.5.40.
Mysql version 5.5.40 has a very critical bug making your data beeing definitely lost.
You may also experience troubles with Mysql 5.5.41 with error "Lost connection" during migration.
Upgrading to any other version or any other database system is abolutely required BEFORE trying
make a Dolibarr upgrade.


***** ChangeLog for 3.8 compared to 3.7.* *****
For users:
FIX: #2519
FIX: #2758 Product::update sets product note to "null" when $prod->note is null
FIX: #2832: Fixed a problem with special characters in expense report PDF model
FIX: #2856 : Wrong table design
FIX: #2901
FIX: #2957 : missing $langs object for trigger
FIX: #2983 Load gravatar avatar images securely over HTTPS
FIX: #2987: removed dead function moneyMeter()
FIX: #3009: Better filtering to prevent SQL injection
FIX: #3009: Better filtering to prevent SQL injection
FIX: #3091 TotalHT amount in supplier order is bold unlike the rest of Dolibarr
FIX: #3138 - Too much visible thing when access is denied on public pages
FIX: #3173 Overlapping of shipment ref
FIX: Adding 5 more choice link into survey module was not working with chrome
FIX: bad calculation for stock value
FIX: Bad link to login page into email for password renewal.
FIX: Bad logo for status "Do not contact" of thirdparty.
FIX: Bad variable usage
FIX: Better management error into the color conversion functions
FIX: [bug #1883] missing field in SQL installation
FIX: Bug on order and supplier invoice numeration mask when use supplier code
FIX: Bug on order and supplier invoice numeration mask when use supplier code
FIX: button create payment hide if tax amount is less than 1
FIX: can receive new batch product on supplier order
FIX: can show print page after product save
FIX: Close #2835 Customer prices of a product shows incorrect history order
FIX: Close #2837 Product list table column header does not match column body