@@ -338,6 +338,7 @@ ProspectLevel=Prospect potential
 ContactPrivate=Private
 ContactPublic=Shared
 ContactVisibility=Visibility
+ContactOthers=Other
 OthersNotLinkedToThirdParty=Others, not linked to a third party
 ProspectStatus=Prospect status
 PL_NONE=None
